# mikro-server-next

./: .gitignore  CHANGELOG.md  CONFIG.md  Dockerfile  README.md  ROI_BOUNDS_IMPLEMENTATION.md  config.yaml  demo_roi_bounds.py  docker-compose.yaml  manage.py  pyproject.toml  run-debug.sh  run.sh  test.py
.github/workflows/: docker-build.yaml  docker-dev.yaml  docker-next.yaml  pull.yaml  release.yaml  tests.yaml
authentikate/: expand.py  models.py  settings.py  structs.py  types.py  utils.py
core/: admin.py  age.py  base_models.py  channel.py  channel_signals.py  channels.py  creation.py  datalayer.py  duck.py  enums.py  fields.py  filters.py  inputs.py  loaders.py  managers.py  models.py  order.py  pagination.py  s3.py  scalars.py  schema.py  scoping.py  signals.py  type_gen.py  types.py  utils.py
core/consumers/: graphql.py
core/contrib/: initialization.py  inspect.py  magic_types.py  s3_magika.py  types.py
core/contrib/detectors/: base.py  bioimage.py  bioimage_data.json  errors.py
core/contrib/detectors/magika/: __init__.py  detector.py  s3_magika.py
core/inputs/: __init__.py  image.py  views.py
core/logic/: __init__.py  image.py  roi.py  tables.py  views.py
core/management/commands/: ensure_duck.py  ensure_onto.py  validate_settings.py
core/migrations/: 0001_initial.py  0002_alter_layer_lens_alter_layer_scene_valuehistogram.py  0002_alter_protocolstepmapping_t.py  0002_entity_entitykind_historicalentity_ontology_and_more.py  0002_expression_store_alter_expression_ontology.py  0002_file_content_type_file_size_and_more.py  0002_file_membership_historicalfile_membership.py  0002_historicalstructureview_structureview_and_more.py  0002_image_tags.py  0002_initial.py  0002_mediastore_file_name_mediastore_mime_type.py  0002_remove_channelview_channel_and_more.py  0002_table_created_at_table_creator.py  0002_table_tags_alter_image_pinned_by.py  0003_bigfilestore.py  0003_channellabel_lightpath.py  0003_dataroi_kind_dataroi_x_dim_dataroi_x_max_and_more.py  0003_dataset_description_two_and_more.py  0003_dataset_tags.py  0003_historicalprotocolstep_plate_children_and_more.py  0003_historicalrgbview_active_rgbview_active.py  0003_imageintmetric.py  0003_metaschema_historicalmetaschema_unstructuredmeta.py  0003_ontology_store.py  0003_rename_of_entity_parent_and_more.py  0003_zarrstore_version.py  0004_alter_channellabel_anchor_alter_lightpath_anchor_and_more.py  0004_alter_historicalrgbview_base_color_and_more.py  0004_alter_imageintmetric_image.py  0004_entitygroup_historicalentitygroup_entity_group_and_more.py  0004_expression_metric_kind.py  0004_file.py  0004_file_organization_historicalfile_organization.py  0004_historicalroi_max_c_historicalroi_max_t_and_more.py  0004_meshstore_mesh.py  0004_remove_entity_parent_remove_historicalentity_parent.py  0005_alter_channellabel_anchor_alter_lightpath_anchor.py  0005_alter_entitykind_options_and_more.py  0005_alter_expression_metric_kind_and_more.py  0005_alter_imageintmetric_image.py  (+83 more)
core/models/: __init__.py  adataset.py  dataset.py  image.py  instrumentation.py  meta.py  roi.py  stage.py  view.py
core/mutations/: __init__.py  _generic.py  accessor.py  adataset.py  anchor.py  antibody.py  camera.py  channel.py  dataroi.py  dataset.py  entity.py  entity_group.py  entity_kind.py  entity_metric.py  entity_relation.py  era.py  experiment.py  expression.py  file.py  fluorophore.py  graph.py  image.py  instrument.py  layer.py  lens.py  linked_expression.py  mesh.py  multiwellplate.py  objective.py  ontology.py  permission.py  protocol.py  protocol_step.py  protocol_step_template.py  reagent.py  relation_metric.py  render_tree.py  rendered_plot.py  rgb_context.py  roi.py  (+10 more)
core/queries/: __init__.py  active_views.py  children.py  entity copy.py  entity.py  entity_graph.py  image.py  knowledge_graph.py  linked_expression.py  permissions.py  relation.py  rows.py
core/render/: enums.py
core/render/inputs/: models.py  types.py
core/render/objects/: models.py  types.py
core/subscriptions/: __init__.py  affine_transformation_views.py  files.py  images.py  rois.py
core/tests/: test_model_creation.py  test_retrieval.py
core/types/: __init__.py  _shared.py  acquisition.py  adataset.py  auth.py  credentials.py  image.py  instrumentation.py  mesh.py  metadata.py  renders.py
datalayer/: base_models.py  datalayer.py  inputs.py  models.py  scalars.py  types.py
datalayer/migrations/: 0001_initial.py  0002_datalayerstore_organization.py
datalayer/mutations/: __init__.py  _stores.py  bigfile.py  media.py  parquet.py  zarr.py
examples/: demo_5d_roi.py
kante/: __init__.py  channel.py  context.py  enums.py  models.py  register.py
kante/consumers/: http.py  ws.py
koherent/: apps.py  extensions.py  fields.py  filters.py  models.py  signals.py  types.py  utils.py
lightpath/: constants.py  enums.py
lightpath/inputs/: models.py  types.py
lightpath/objects/: models.py  types.py
mikro_server/: asgi.py  configuration.py  schema.py  settings.py  settings_test.py  urls.py  wsgi.py
pioneer/: apps.py
pioneer/management/commands/: demo.py
tests/: conftest.py  constants.py  seed.py  test.py  test_architecture.py  test_config.py  test_dataset.py  test_filters_dataset.py  test_filters_file_table.py  test_filters_image.py  test_filters_misc.py  test_filters_newmodels.py  test_filters_roi.py  test_filters_task.py  test_filters_views.py  test_image.py  test_magika.py  test_ordering.py  test_org_scoping.py  test_print_schema.py  test_roi_bounds.py  test_s3.py  test_schema.py  test_store_uploads.py  test_table_rows.py  test_task_provenance.py  test_view_creation.py
tests/integration/: docker-compose.yaml
